--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -45,6 +45,7 @@
     "item.cgn.potion.effect.surge": "Surge Potion",
     "item.cgn.splash_potion.effect.surge": "Surge Splash Potion",
     "item.cgn.lingering_potion.effect.surge": "Surge Lingering Potion",
+    "item.cgn.wispthorn": "Wispthorn",
 
 
 
