electroplasm carvers chagne

--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -46,7 +46,7 @@
     "item.cgn.splash_potion.effect.surge": "Surge Splash Potion",
     "item.cgn.lingering_potion.effect.surge": "Surge Lingering Potion",
     "item.cgn.wispthorn": "Wispthorn",
-    "item.cgn.electroplasm_carvers": "Electroplasm Carvers",
+    "item.cgn.electroplasm_carver": "Electroplasm Carver",
     "item.cgn.shockweave_helmet": "Shockweave Helmet",
     "item.cgn.shockweave_chestplate": "Shockweave Chestplate",
     "item.cgn.shockweave_leggings": "Shockweave Leggings",
