--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -51,6 +51,7 @@
     "item.cgn.shockweave_chestplate": "Shockweave Chestplate",
     "item.cgn.shockweave_leggings": "Shockweave Leggings",
     "item.cgn.shockweave_boots": "Shockweave Boots",
+    "item.cgn.soulmender": "Soulmender",
 
     "subtitle.cgn.item.double_edged_sword.throw": "Doubled Edged Sword clangs",
     "subtitle.cgn.item.double_edged_sword.bounce": "Doubled Edged Sword bounces",
