--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -54,6 +54,7 @@
     "item.cgn.soulmender": "Soulmender",
     "item.cgn.electromodulator": "Electromodulator",
 
+    "entity.cgn.slated_skeleton": "Slated Skeleton",
 
     "subtitle.cgn.item.double_edged_sword.throw": "Doubled Edged Sword clangs",
     "subtitle.cgn.item.double_edged_sword.bounce": "Doubled Edged Sword bounces",
