--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -56,7 +56,7 @@
     "item.cgn.soulmender": "Soulmender",
     "item.cgn.electromodulator": "Electromodulator",
 
-    "entity.cgn.slated_skeleton": "Slated Skeleton",
+    "enchantment.cgn.bounceback": "Bounceback",
 
     "subtitle.cgn.item.double_edged_sword.throw": "Doubled Edged Sword clangs",
     "subtitle.cgn.item.double_edged_sword.bounce": "Doubled Edged Sword bounces",
