--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -55,8 +55,10 @@
     "item.cgn.shockweave_boots": "Shockweave Boots",
     "item.cgn.soulmender": "Soulmender",
     "item.cgn.electromodulator": "Electromodulator",
+    "item.cgn.music_disc_sunrise": "Music Disc",
 
-    "enchantment.cgn.bounceback": "Bounceback",
+    "enchantment.cgn.recoil": "Recoil",
+    "enchantment.cgn.pulse": "Pulse",
 
     "subtitle.cgn.item.double_edged_sword.throw": "Doubled Edged Sword clangs",
     "subtitle.cgn.item.double_edged_sword.bounce": "Doubled Edged Sword bounces",
@@ -68,6 +70,8 @@
     "subtitle.cgn.entity.electroplasm_wave.hit": "Electroplasm Wave breaks",
     "subtitle.cgn.item.soulmender.heal": "Soulmender Heals",
     "subtitle.cgn.item.electromodulator.use": "Electromodulator Discharges",
+    "subtitle.cgn.item.ebonite_sword.hit": "Mace Strikes Ebonite Sword",
+    "subtitle.cgn.item.ebonite_sword.hit_block": "Heavy Impact",
 
     "death.attack.cgn.player_lightning": "%s was struck by lightning",
     "death.attack.cgn.player_lightning.player": "%s was struck by %s's lightning",
@@ -88,7 +92,7 @@
     "advancements.cgn.unlock_electroplasm.title":"Amped Up",
     "advancements.cgn.unlock_electroplasm.description":"Discover Electroplasm",
     "advancements.cgn.make_ebonite.title":"Human Forge",
-    "advancements.cgn.make_ebonite.description":"Make Ebonite by landing on Ebognite with Charged Gloomstone Armor",
+    "advancements.cgn.make_ebonite.description":"Create Ebonite by landing on Ebognite with Charged Gloomstone Armor",
 
     "actionbar.cgn.electroplasm.full":"\ua004\ua001",
     "actionbar.cgn.electroplasm.half":"\ua004\ua002",
