--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -55,12 +55,9 @@
     "item.cgn.electromodulator": "Electromodulator",
     "item.cgn.music_disc_sunrise": "Music Disc",
     "item.cgn.stygian_relic": "Stygian Relic",
-
     "block.cgn.stygian_totem": "Stygian Totem",
-    
     "enchantment.cgn.recoil": "Recoil",
     "enchantment.cgn.pulse": "Pulse",
-
     "subtitle.cgn.item.double_edged_sword.throw": "Doubled Edged Sword clangs",
     "subtitle.cgn.item.double_edged_sword.bounce": "Doubled Edged Sword bounces",
     "subtitle.cgn.item.double_edged_sword.swoosh": "Doubled Edged Sword swooshes",
@@ -94,5 +91,5 @@
     "actionbar.cgn.electroplasm.full": "\ua004\ua001",
     "actionbar.cgn.electroplasm.half": "\ua004\ua002",
     "actionbar.cgn.electroplasm.empty": "\ua004\ua003",
-    "attribute.name.generic.max_electroplasm": "Max Electroplasm"
+    "attribute.name.max_electroplasm": "Max Electroplasm"
 }
