malachite and friends

--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -55,6 +55,8 @@
     "item.cgn.electromodulator": "Electromodulator",
     "item.cgn.music_disc_sunrise": "Music Disc",
     "item.cgn.stygian_relic": "Stygian Relic",
+    "item.cgn.malachite": "Malachite",
+
     "block.cgn.stygian_totem": "Stygian Totem",
     "enchantment.cgn.recoil": "Recoil",
     "enchantment.cgn.pulse": "Pulse",
