--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -56,6 +56,7 @@
     "item.cgn.music_disc_sunrise": "Music Disc",
     "item.cgn.stygian_relic": "Stygian Relic",
     "item.cgn.malachite": "Malachite",
+    "item.cgn.malachite_knife": "Malachite Knife",
 
     "block.cgn.stygian_totem": "Stygian Totem",
     "enchantment.cgn.recoil": "Recoil",
