--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -60,8 +60,10 @@
     "item.cgn.pyroplasm": "Pyroplasm",
 
     "block.cgn.stygian_totem": "Stygian Totem",
+
     "enchantment.cgn.recoil": "Recoil",
     "enchantment.cgn.pulse": "Pulse",
+
     "subtitle.cgn.item.double_edged_sword.throw": "Doubled Edged Sword clangs",
     "subtitle.cgn.item.double_edged_sword.bounce": "Doubled Edged Sword bounces",
     "subtitle.cgn.item.double_edged_sword.swoosh": "Doubled Edged Sword swooshes",
@@ -74,6 +76,7 @@
     "subtitle.cgn.item.electromodulator.use": "Electromodulator Discharges",
     "subtitle.cgn.item.ebonite_sword.hit": "Mace Strikes Ebonite Sword",
     "subtitle.cgn.item.ebonite_sword.hit_block": "Heavy Impact",
+
     "death.attack.cgn.player_lightning": "%s was struck by lightning",
     "death.attack.cgn.player_lightning.player": "%s was struck by %s's lightning",
     "death.attack.cgn.player_lightning.item": "%s was struck by %s's lightning using %s",
@@ -95,7 +98,10 @@
     "advancements.cgn.unlock_electroplasm.title": "Amped Up",
     "advancements.cgn.unlock_electroplasm.description": "Discover Electroplasm",
     "advancements.cgn.make_ebonite.title": "Human Forge",
-    "advancements.cgn.make_ebonite.description": "Create Ebonite by landing on Ebognite with Charged Gloomstone Armor",
+    "advancements.cgn.make_ebonite.description": "Create Ebonite by landing on Ebognite with Charged Armor",
+    "advancements.cgn.make_pyroplasm.title": "Breaking Blocks",
+    "advancements.cgn.make_pyroplasm.description": "Create Pyroplasm through an explosive reaction",
+    
     "actionbar.cgn.electroplasm.full": "\ua004\ua001",
     "actionbar.cgn.electroplasm.half": "\ua004\ua002",
     "actionbar.cgn.electroplasm.empty": "\ua004\ua003",
