--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -58,6 +58,7 @@
     "item.cgn.malachite": "Malachite",
     "item.cgn.malachite_knife": "Malachite Knife",
     "item.cgn.pyroplasm": "Pyroplasm",
+    "item.cgn.mindflare": "Mindflare",
 
     "block.cgn.stygian_totem": "Stygian Totem",
 
