--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -60,7 +60,7 @@
     "item.cgn.pyroplasm": "Pyroplasm",
     "item.cgn.mindflare": "Mindflare",
 
-    "block.cgn.stygian_totem": "Stygian Totem",
+    "item.cgn.stygian_totem": "Stygian Totem",
 
     "enchantment.cgn.recoil": "Recoil",
     "enchantment.cgn.pulse": "Pulse",
