--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -59,8 +59,10 @@
     "item.cgn.malachite_knife": "Malachite Knife",
     "item.cgn.pyroplasm": "Pyroplasm",
     "item.cgn.mindflare": "Mindflare",
-
     "item.cgn.stygian_totem": "Stygian Totem",
+
+    "item.whenThrown": "When Thrown:",
+
 
     "enchantment.cgn.recoil": "Recoil",
     "enchantment.cgn.pulse": "Pulse",
