--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -61,11 +61,12 @@
     "item.cgn.mindflare": "Mindflare",
     "item.cgn.stygian_totem": "Stygian Totem",
     "item.cgn.smoldering_vortex": "Smoldering Vortex",
+    "item.cgn.guster": "Guster",
 
     "item.whenThrown": "When Thrown:",
 
     "block.cgn.smoldering_vortex.name": " ",
-
+    "block.cgn.guster.name": " ",
 
     "enchantment.cgn.recoil": "Recoil",
     "enchantment.cgn.pulse": "Pulse",
