stygian totem and redstone stuff i wont need

--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -67,6 +67,7 @@
 
     "block.cgn.smoldering_vortex.name": " ",
     "block.cgn.guster.name": " ",
+    "block.cgn.stygian_totem.name": " ",
 
     "enchantment.cgn.recoil": "Recoil",
     "enchantment.cgn.pulse": "Pulse",
