--- a/resourcepack/assets/cgn/lang/eng.json
+++ b/resourcepack/assets/cgn/lang/eng.json
@@ -1,68 +1,21 @@
 {
     "pack.cgn": "Cognition",
-    "cgn.tooltip": "\ua000 %s",
     "cgn.attribute": " %s %s",
+
     "entity.cgn.gloomstone_sentinel": "Gloomstone Sentinel",
-    "item.cgn.automatic_bow": "Automatic Bow",
-    "item.cgn.windup_crossbow": "Windup Crossbow",
+    
     "item.cgn.windup_crossbow.projectiles": "%s Loaded Projectiles",
     "item.cgn.windup_crossbow.projectile": "%s Loaded Projectile",
-    "item.cgn.screw": "Screw",
-    "item.cgn.cog": "Cog",
-    "item.cgn.gloomstone_shard": "Gloomstone Shard",
-    "item.cgn.gloomstone": "Gloomstone",
-    "item.cgn.gloomstone_blade": "Gloomstone Blade",
-    "item.cgn.gloomstone_axe": "Gloomstone Axe",
-    "item.cgn.gloomstone_hoe": "Gloomstone Hoe",
-    "item.cgn.gloomstone_pickaxe": "Gloomstone Pickaxe",
-    "item.cgn.gloomstone_shovel": "Gloomstone Shovel",
-    "item.cgn.gloomstone_sword": "Dual Bladed Gloomstone Sword",
-    "item.cgn.gloomstone_dagger": "Gloomstone Dagger",
-    "item.cgn.gloomstone_helmet": "Gloomstone Helmet",
-    "item.cgn.gloomstone_chestplate": "Gloomstone Chestplate",
-    "item.cgn.gloomstone_leggings": "Gloomstone Leggings",
-    "item.cgn.gloomstone_boots": "Gloomstone Boots",
-    "item.cgn.ebonite_axe": "Ebonite Axe",
-    "item.cgn.ebonite_hoe": "Ebonite Hoe",
-    "item.cgn.ebonite_pickaxe": "Ebonite Pickaxe",
-    "item.cgn.ebonite_shovel": "Ebonite Shovel",
-    "item.cgn.ebonite_sword": "Dual Bladed Ebonite Sword",
-    "item.cgn.ebonite_dagger": "Ebonite Dagger",
-    "item.cgn.ebonite_helmet": "Ebonite Helmet",
-    "item.cgn.ebonite_chestplate": "Ebonite Chestplate",
-    "item.cgn.ebonite_leggings": "Ebonite Leggings",
-    "item.cgn.ebonite_boots": "Ebonite Boots",
     "item.cgn.ebonite_upgrade_smithing_template": "Ebonite Upgrade",
     "item.cgn.ebonite_upgrade_smithing_template.desc": "Smithing Template",
     "item.cgn.smithing_template.ebonite_upgrade.applies_to": " Gloomstone Equipment",
     "item.cgn.smithing_template.ebonite_upgrade.ingredients": " Ebonite Ingot",
     "item.cgn.charge": "Charge: %s",
-    "item.cgn.ebonite_ingot": "Ebonite Ingot",
-    "item.cgn.ebognite": "Ebognite",
-    "item.cgn.midnight_rose": "Midnight Rose",
-    "item.cgn.midnight_rose_seed": "Midnight Rose Seed",
-    "item.cgn.electroplasm": "Electroplasm",
+    "item.cgn.automatic_bow": "Automatic Bow",
+    "item.cgn.windup_crossbow": "Windup Crossbow",
     "item.cgn.potion.effect.surge": "Surge Potion",
     "item.cgn.splash_potion.effect.surge": "Surge Splash Potion",
     "item.cgn.lingering_potion.effect.surge": "Surge Lingering Potion",
-    "item.cgn.wispthorn": "Wispthorn",
-    "item.cgn.electroplasm_carver": "Electroplasm Carver",
-    "item.cgn.shockweave_helmet": "Shockweave Helmet",
-    "item.cgn.shockweave_chestplate": "Shockweave Chestplate",
-    "item.cgn.shockweave_leggings": "Shockweave Leggings",
-    "item.cgn.shockweave_boots": "Shockweave Boots",
-    "item.cgn.soulmender": "Soulmender",
-    "item.cgn.electromodulator": "Electromodulator",
-    "item.cgn.music_disc_sunrise": "Music Disc",
-    "item.cgn.stygian_relic": "Stygian Relic",
-    "item.cgn.malachite": "Malachite",
-    "item.cgn.malachite_knife": "Malachite Knife",
-    "item.cgn.pyroplasm": "Pyroplasm",
-    "item.cgn.mindflare": "Mindflare",
-    "item.cgn.stygian_totem": "Stygian Totem",
-    "item.cgn.smoldering_vortex": "Smoldering Vortex",
-    "item.cgn.guster": "Guster",
-
     "item.whenThrown": "When Thrown:",
 
     "block.cgn.smoldering_vortex.name": " ",
@@ -84,6 +37,7 @@
     "subtitle.cgn.item.electromodulator.use": "Electromodulator Discharges",
     "subtitle.cgn.item.ebonite_sword.hit": "Mace Strikes Ebonite Sword",
     "subtitle.cgn.item.ebonite_sword.hit_block": "Heavy Impact",
+    "subtitle.cgn.entity.pyroplastic_beam": "Pyroplasm Beam Wooshes",
 
     "death.attack.cgn.player_lightning": "%s was struck by lightning",
     "death.attack.cgn.player_lightning.player": "%s was struck by %s's lightning",
