--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -67,6 +67,7 @@
   "item.cgn.lingering_potion.effect.surge": "Surge Lingering Potion",
   "item.cgn.malachite": "Malachite",
   "item.cgn.malachite_knife": "Malachite Knife",
+  "item.cgn.midnight_rose": "Midnight Rose",
   "item.cgn.midnight_rose_seed": "Midnight Rose Seed",
   "item.cgn.mindflare": "Gloomstone Helmet",
   "item.cgn.music_disc_sunrise": "Music Disc",
@@ -87,6 +88,7 @@
   "item.cgn.windup_crossbow": "Windup Crossbow",
   "item.cgn.windup_crossbow.projectile": "%s Loaded Projectile",
   "item.cgn.windup_crossbow.projectiles": "%s Loaded Projectiles",
+  "item.cgn.wispthorn": "Wispthorn",
   "item.whenThrown": "When Thrown:",
   "pack.cgn": "Cognition",
   "subtitle.cgn.entity.electroplasm_wave.cast": "Electroplasm Wave forms",
