--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -49,7 +49,7 @@
   "item.cgn.ebonite_leggings": "Ebonite Leggings",
   "item.cgn.ebonite_pickaxe": "Ebonite Pickaxe",
   "item.cgn.ebonite_shovel": "Ebonite Shovel",
-  "item.cgn.ebonite_upgrade_smithing_template": "Ebonite Upgrade Smithing Template",
+  "item.cgn.ebonite_upgrade_smithing_template": "Ebonite Upgrade",
   "item.cgn.ebonite_upgrade_smithing_template.desc": "Smithing Template",
   "item.cgn.electroplasm": "Electroplasm",
   "item.cgn.gloomstone": "Gloomstone",
