advancement and dropper madness

--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -6,8 +6,12 @@
   "advancements.cgn.electroplasm_wave_damage.title": "Tsunami",
   "advancements.cgn.make_ebonite.description": "Create Ebonite by landing on Ebognite with Charged Armor",
   "advancements.cgn.make_ebonite.title": "Human Forge",
+  "advancements.cgn.make_greek_fire.description": "Create Greek Fire",
+  "advancements.cgn.make_greek_fire.title": "Re-inventing Fire",
   "advancements.cgn.make_pyroplasm.description": "Create Pyroplasm through an explosive reaction",
   "advancements.cgn.make_pyroplasm.title": "Breaking Blocks",
+  "advancements.cgn.move_bubble_with_guster.description": "Be inside a bubble moved by a Guster",
+  "advancements.cgn.move_bubble_with_guster.title": "Blown Away",
   "advancements.cgn.root.description": "By Asdru",
   "advancements.cgn.root.title": "Cognition",
   "advancements.cgn.unlock_electroplasm.description": "Discover Electroplasm",
