--- a/resourcepack/assets/cgn/lang/eng.json
+++ b/resourcepack/assets/cgn/lang/eng.json
@@ -53,6 +53,7 @@
     "death.attack.cgn.malachite_knife.player": "%s took %s's knife to the core",
     "death.attack.cgn.malachite_knife.item": "%s took %s's knife to the core",
     "death.attack.cgn.pyroplastic_beam": "%s was disintegrated by a pyroplastic beam",
+    "death.attack.cgn.pyroplasm_explosion": "%s didn't take the necessary precautions",
 
     "advancements.cgn.root.title": "Cognition",
     "advancements.cgn.root.description": "By Asdru",
