double edged swords rewrite p1

--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -42,7 +42,9 @@
   "item.cgn.automatic_bow": "Automatic Bow",
   "item.cgn.charge": "Charge: %s",
   "item.cgn.cog": "Cog",
-  "item.cgn.double_edged_ebonite_sword": "Double Edged Ebonite Sword",
+  "item.cgn.double_edged_ebonite_sword": "Double Edged Gloomstone Sword",
+  "item.cgn.double_edged_gloomstone_sword": "Double Edged Gloomstone Sword",
+  "item.cgn.double_edged_malachite_sword": "Double Edged Malachite Sword",
   "item.cgn.ebognite": "Ebognite",
   "item.cgn.ebonite_axe": "Ebonite Axe",
   "item.cgn.ebonite_boots": "Ebonite Boots",
