--- a/resourcepack/assets/cgn/lang/eng.json
+++ b/resourcepack/assets/cgn/lang/eng.json
@@ -17,7 +17,7 @@
     "item.cgn.splash_potion.effect.surge": "Surge Splash Potion",
     "item.cgn.lingering_potion.effect.surge": "Surge Lingering Potion",
     "item.whenThrown": "When Thrown:",
-
+    "cgn.item.double_edged_malachite_sword.missing_blades":"No Blades",
     "block.cgn.smoldering_vortex.name": " ",
     "block.cgn.guster.name": " ",
     "block.cgn.stygian_totem.name": " ",
