sounds for the darn thing

--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -107,6 +107,8 @@
   "subtitle.cgn.item.chargeable_armor.land": "Charged Armor discharges",
   "subtitle.cgn.item.double_edged_sword.bounce": "Doubled Edged Sword bounces",
   "subtitle.cgn.item.double_edged_sword.punch": "Doubled Edged Sword clinks",
+  "subtitle.cgn.item.double_edged_sword.shard_hit": "Malachite Blades Reform",
+  "subtitle.cgn.item.double_edged_sword.shatter": "Malachite Blades Shatter",
   "subtitle.cgn.item.double_edged_sword.swoosh": "Doubled Edged Sword swooshes",
   "subtitle.cgn.item.double_edged_sword.throw": "Doubled Edged Sword clangs",
   "subtitle.cgn.item.ebonite_sword.hit": "Mace Strikes Ebonite Sword",
