--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -61,6 +61,7 @@
   "item.cgn.ebonite_upgrade_smithing_template.desc": "Smithing Template",
   "item.cgn.electromodulator": "Electromodulator",
   "item.cgn.electroplasm": "Electroplasm",
+  "item.cgn.electroplasm_carver": "Electroplasm Carver",
   "item.cgn.gloomstone": "Gloomstone",
   "item.cgn.gloomstone_axe": "Gloomstone Axe",
   "item.cgn.gloomstone_blade": "Gloomstone Blade",
