--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -93,6 +93,7 @@
   "item.cgn.smithing_template.ebonite_upgrade.applies_to": " Gloomstone Equipment",
   "item.cgn.smithing_template.ebonite_upgrade.ingredients": " Ebonite Ingot",
   "item.cgn.smoldering_vortex": "Smoldering Vortex",
+  "item.cgn.soulmender": "Soulmender",
   "item.cgn.splash_potion.effect.surge": "Surge Splash Potion",
   "item.cgn.stygian_relic": "Stygian Relic",
   "item.cgn.stygian_totem": "Stygian Totem",
