electroplasm & potion madness

--- a/resourcepack/assets/cgn/lang/eng.json
+++ b/resourcepack/assets/cgn/lang/eng.json
@@ -13,14 +13,15 @@
     "item.cgn.charge": "Charge: %s",
     "item.cgn.automatic_bow": "Automatic Bow",
     "item.cgn.windup_crossbow": "Windup Crossbow",
-    "item.cgn.potion.effect.surge": "Surge Potion",
-    "item.cgn.splash_potion.effect.surge": "Surge Splash Potion",
-    "item.cgn.lingering_potion.effect.surge": "Surge Lingering Potion",
-    "item.whenThrown": "When Thrown:",
-    "cgn.item.double_edged_malachite_sword.missing_blades":"No Blades",
+    "item.cgn.double_edged_malachite_sword.missing_blades":"No Blades",
     "block.cgn.smoldering_vortex.name": " ",
     "block.cgn.guster.name": " ",
     "block.cgn.stygian_totem.name": " ",
+    
+    "item.whenThrown": "When Thrown:",
+    "item.minecraft.potion.effect.surge": "Surge Potion",
+    "item.minecraft.splash_potion.effect.surge": "Surge Splash Potion",
+    "item.minecraft.lingering_potion.effect.surge": "Surge Lingering Potion",
 
     "enchantment.cgn.recoil": "Recoil",
     "enchantment.cgn.pulse": "Pulse",
