--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -21,7 +21,6 @@
   "block.cgn.smoldering_vortex.name": " ",
   "block.cgn.stygian_totem.name": " ",
   "cgn.attribute": " %s %s",
-  "cgn.item.double_edged_malachite_sword.missing_blades": "No Blades",
   "death.attack.cgn.double_edged_sword": "%s was sliced",
   "death.attack.cgn.double_edged_sword.item": "%s was sliced by %s using %s",
   "death.attack.cgn.double_edged_sword.player": "%s was sliced by %s",
@@ -46,6 +45,7 @@
   "item.cgn.double_edged_ebonite_sword": "Double Edged Ebonite Sword",
   "item.cgn.double_edged_gloomstone_sword": "Double Edged Gloomstone Sword",
   "item.cgn.double_edged_malachite_sword": "Double Edged Malachite Sword",
+  "item.cgn.double_edged_malachite_sword.missing_blades": "No Blades",
   "item.cgn.ebognite": "Ebognite",
   "item.cgn.ebonite_axe": "Ebonite Axe",
   "item.cgn.ebonite_boots": "Ebonite Boots",
@@ -75,14 +75,12 @@
   "item.cgn.gloomstone_shard": "Gloomstone Shard",
   "item.cgn.gloomstone_shovel": "Gloomstone Shovel",
   "item.cgn.guster": "Guster",
-  "item.cgn.lingering_potion.effect.surge": "Surge Lingering Potion",
   "item.cgn.malachite": "Malachite",
   "item.cgn.malachite_knife": "Malachite Knife",
   "item.cgn.midnight_rose": "Midnight Rose",
   "item.cgn.midnight_rose_seed": "Midnight Rose Seed",
   "item.cgn.mindflare": "Mindflare",
   "item.cgn.music_disc_sunrise": "Music Disc",
-  "item.cgn.potion.effect.surge": "Surge Potion",
   "item.cgn.pyroplasm": "Pyroplasm",
   "item.cgn.pyroplastic_bolt": "Pyroplastic Bolt",
   "item.cgn.screw": "Screw",
@@ -94,13 +92,15 @@
   "item.cgn.smithing_template.ebonite_upgrade.ingredients": " Ebonite Ingot",
   "item.cgn.smoldering_vortex": "Smoldering Vortex",
   "item.cgn.soulmender": "Soulmender",
-  "item.cgn.splash_potion.effect.surge": "Surge Splash Potion",
   "item.cgn.stygian_relic": "Stygian Relic",
   "item.cgn.stygian_totem": "Stygian Totem",
   "item.cgn.windup_crossbow": "Windup Crossbow",
   "item.cgn.windup_crossbow.projectile": "%s Loaded Projectile",
   "item.cgn.windup_crossbow.projectiles": "%s Loaded Projectiles",
   "item.cgn.wispthorn": "Wispthorn",
+  "item.minecraft.lingering_potion.effect.surge": "Surge Lingering Potion",
+  "item.minecraft.potion.effect.surge": "Surge Potion",
+  "item.minecraft.splash_potion.effect.surge": "Surge Splash Potion",
   "item.whenThrown": "When Thrown:",
   "pack.cgn": "Cognition",
   "subtitle.cgn.entity.electroplasm_wave.cast": "Electroplasm Wave forms",
