--- a/resourcepack/assets/cgn/lang/en_us.json
+++ b/resourcepack/assets/cgn/lang/en_us.json
@@ -40,6 +40,7 @@
   "enchantment.cgn.recoil": "Recoil",
   "entity.cgn.gloomstone_sentinel": "Gloomstone Sentinel",
   "item.cgn.automatic_bow": "Automatic Bow",
+  "item.cgn.bloodwraught_briar": "Bloodwraught Briar",
   "item.cgn.charge": "Charge: %s",
   "item.cgn.cog": "Cog",
   "item.cgn.double_edged_ebonite_sword": "Double Edged Ebonite Sword",
@@ -103,8 +104,18 @@
   "item.minecraft.splash_potion.effect.surge": "Surge Splash Potion",
   "item.whenThrown": "When Thrown:",
   "pack.cgn": "Cognition",
+  "subtitle.cgn.block.smoldering_vortex.trigger": "Smoldering Vortex Activates",
   "subtitle.cgn.entity.electroplasm_wave.cast": "Electroplasm Wave forms",
   "subtitle.cgn.entity.electroplasm_wave.hit": "Electroplasm Wave breaks",
+  "subtitle.cgn.entity.gloomstone_sentinel.charge_attack": "Gloomstone Core Charges",
+  "subtitle.cgn.entity.gloomstone_sentinel.close": "Gloomstone Sentinel Closes",
+  "subtitle.cgn.entity.gloomstone_sentinel.death": "Gloomstone Sentinel Dies",
+  "subtitle.cgn.entity.gloomstone_sentinel.hurt": "Gloomstone Sentinel Hurts",
+  "subtitle.cgn.entity.gloomstone_sentinel.idle": "Gloomstone Sentinel Idles",
+  "subtitle.cgn.entity.gloomstone_sentinel.open": "Gloomstone Sentinel Opens",
+  "subtitle.cgn.entity.gloomstone_sentinel.open_idle": "Gloomstone Core Rotates",
+  "subtitle.cgn.entity.gloomstone_sentinel.ranged_attack": "Gloomstone Core Discharges",
+  "subtitle.cgn.entity.gloomstone_sentinel.walking": "Gloomstone Sentinel Stomps",
   "subtitle.cgn.entity.pyroplastic_beam": "Pyroplasm Beam Wooshes",
   "subtitle.cgn.item.chargeable_armor.jump": "Air brushes",
   "subtitle.cgn.item.chargeable_armor.land": "Charged Armor discharges",
