--- a/resourcepack/assets/cgn/lang/eng.json
+++ b/resourcepack/assets/cgn/lang/eng.json
@@ -32,7 +32,6 @@
     "subtitle.cgn.item.double_edged_sword.punch": "Doubled Edged Sword clinks",
     "subtitle.cgn.item.double_edged_sword.shatter": "Malachite Blades Shatter",
     "subtitle.cgn.item.double_edged_sword.shard_hit": "Malachite Blades Reform",
-
     "subtitle.cgn.item.chargeable_armor.land": "Charged Armor discharges",
     "subtitle.cgn.item.chargeable_armor.jump": "Air brushes",
     "subtitle.cgn.entity.electroplasm_wave.cast": "Electroplasm Wave forms",
@@ -42,6 +41,16 @@
     "subtitle.cgn.item.ebonite_sword.hit": "Mace Strikes Ebonite Sword",
     "subtitle.cgn.item.ebonite_sword.hit_block": "Heavy Impact",
     "subtitle.cgn.entity.pyroplastic_beam": "Pyroplasm Beam Wooshes",
+    "subtitle.cgn.block.smoldering_vortex.trigger": "Smoldering Vortex Activates",
+    "subtitle.cgn.entity.gloomstone_sentinel.charge_attack": "Gloomstone Core Charges",
+    "subtitle.cgn.entity.gloomstone_sentinel.close": "Gloomstone Sentinel Closes",
+    "subtitle.cgn.entity.gloomstone_sentinel.death": "Gloomstone Sentinel Dies",
+    "subtitle.cgn.entity.gloomstone_sentinel.hurt": "Gloomstone Sentinel Hurts",
+    "subtitle.cgn.entity.gloomstone_sentinel.idle": "Gloomstone Sentinel Idles",
+    "subtitle.cgn.entity.gloomstone_sentinel.open": "Gloomstone Sentinel Opens",
+    "subtitle.cgn.entity.gloomstone_sentinel.open_idle": "Gloomstone Core Rotates",
+    "subtitle.cgn.entity.gloomstone_sentinel.ranged_attack": "Gloomstone Core Discharges",
+    "subtitle.cgn.entity.gloomstone_sentinel.walking": "Gloomstone Sentinel Stomps",
 
     "death.attack.cgn.player_lightning": "%s was struck by lightning",
     "death.attack.cgn.player_lightning.player": "%s was struck by %s's lightning",
